update stories, index, imagebank, translator

--- a/stories/es/0008_qué-estás-haciendo.html
+++ b/stories/es/0008_qué-estás-haciendo.html
@@ -84,7 +84,7 @@ Nina Orange<br>Español</div><p style="page-break-after: always;"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
 
-<p>Qué estás haciendo?</p>
+<p>¿Qué estás haciendo?</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
