--- a/stories/es/0210_tingi-y-las-vacas.html
+++ b/stories/es/0210_tingi-y-las-vacas.html
@@ -84,7 +84,7 @@ Ingrid Schechter<br>Español</div><p style="page-break-after: always;"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/09.jpg" /></p>
 
-<p>Abuela escondió a Tingi bajo las hojas.</p>
+<p>La abuela escondió a Tingi bajo las hojas.</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
