--- a/stories/es/0210_tingi-y-las-vacas_slides.html
+++ b/stories/es/0210_tingi-y-las-vacas_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/09.jpg" /></p>
-<p>Abuela escondió a Tingi bajo las hojas.</p>
+<p>La abuela escondió a Tingi bajo las hojas.</p>
 <center>
 <strong>8</strong>
 </center>
