--- a/stories/es/0231_el-libro-del-clima.html
+++ b/stories/es/0231_el-libro-del-clima.html
@@ -70,14 +70,14 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Español</div><p style="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
 
-<p>Llueve.</p>
+<p>Está lloviendo.</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
 
-<p>Truena.</p>
+<p>Hay truenos.</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
