--- a/stories/es/0327_contar-animales.html
+++ b/stories/es/0327_contar-animales.html
@@ -56,7 +56,7 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>Español</div><p style="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
 
-<p>Cinco impalas y seis cerdos salvajes están caminando hacia el agua.</p>
+<p>Cinco impalas y seis jabalíes están caminando hacia el agua.</p>
 
 <div class="pagenum">4</div>
 <p style="page-break-after: always;"></p>
@@ -70,7 +70,7 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>Español</div><p style="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
 
-<p>Ocho ranas y nueve de peces están nadando en el agua.</p>
+<p>Ocho ranas y nueve peces están nadando en el agua.</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
