--- a/stories/es/0327_contar-animales_slides.html
+++ b/stories/es/0327_contar-animales_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
-<p>Cinco impalas y seis cerdos salvajes están caminando hacia el agua.</p>
+<p>Cinco impalas y seis jabalíes están caminando hacia el agua.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
-<p>Ocho ranas y nueve de peces están nadando en el agua.</p>
+<p>Ocho ranas y nueve peces están nadando en el agua.</p>
 <center>
 <strong>6</strong>
 </center>
