--- a/stories/index.html
+++ b/stories/index.html
@@ -311,6 +311,12 @@
       <td><a href="#zh0212">zh</a></td>
     </tr>
     <tr>
+      <td>0214</td>
+      <td><a href="http://africanstorybook.org/stories/rat">The rat</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#zh0214">zh</a></td>
+    </tr>
+    <tr>
       <td>0215</td>
       <td><a href="http://africanstorybook.org/stories/breakfast">Breakfast</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
@@ -320,7 +326,7 @@
       <td>0223</td>
       <td><a href="http://africanstorybook.org/stories/domestic-animals">Domestic animals</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#fa0223">fa</a></td>
+      <td><a href="#fa0223">fa</a>, <a href="#zh0223">zh</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -339,6 +345,12 @@
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#hi0253">hi</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+    </tr>
+    <tr>
+      <td>0264</td>
+      <td><a href="http://africanstorybook.org/stories/letters">Letters</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#zh0264">zh</a></td>
     </tr>
     <tr>
       <td>0271</td>
@@ -363,6 +375,12 @@
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#eo0302">eo</a>, <a href="#fa0302">fa</a>, <a href="#no0302">no</a>, <a href="#zh0302">zh</a></td>
+    </tr>
+    <tr>
+      <td>0306</td>
+      <td><a href="http://africanstorybook.org/stories/my-daughter-polar">My daughter Polar</a></td>
+      <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+      <td><a href="#zh0306">zh</a></td>
     </tr>
     <tr>
       <td>0309</td>
@@ -956,11 +974,25 @@
       <td><a name="zh0212"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0214</td>
+      <td>老鼠</td>
+      <td style="text-align: center"><a href="/stories/zh/0214_老鼠.html">HTML</a> · <a href="/stories/zh/0214_老鼠_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="zh0214"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0215</td>
       <td>早饭</td>
       <td style="text-align: center"><a href="/stories/zh/0215_早饭.html">HTML</a> · <a href="/stories/zh/0215_早饭_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="zh0215"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0223</td>
+      <td>家禽家畜</td>
+      <td style="text-align: center"><a href="/stories/zh/0223_家禽家畜.html">HTML</a> · <a href="/stories/zh/0223_家禽家畜_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="zh0223"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0231</td>
@@ -984,6 +1016,13 @@
       <td><a name="zh0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0264</td>
+      <td>信</td>
+      <td style="text-align: center"><a href="/stories/zh/0264_信.html">HTML</a> · <a href="/stories/zh/0264_信_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="zh0264"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0271</td>
       <td>两个</td>
       <td style="text-align: center"><a href="/stories/zh/0271_两个.html">HTML</a> · <a href="/stories/zh/0271_两个_slides.html" target="_blank">Slideshow</a></td>
@@ -996,6 +1035,13 @@
       <td style="text-align: center"><a href="/stories/zh/0302_火.html">HTML</a> · <a href="/stories/zh/0302_火_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="zh0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0306</td>
+      <td>我的女儿Polar</td>
+      <td style="text-align: center"><a href="/stories/zh/0306_我的女儿polar.html">HTML</a> · <a href="/stories/zh/0306_我的女儿polar_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/zh.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ufa524wxq9ot6zr/zh.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsbXhPZVI0QlpqUGs/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="zh0306"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0309</td>
@@ -1688,8 +1734,8 @@
   <tbody>
     <tr>
       <td>0006</td>
-      <td>Anansi y sabiduría</td>
-      <td style="text-align: center"><a href="/stories/es/0006_anansi_y_sabiduría.html">HTML</a> · <a href="/stories/es/0006_anansi_y_sabiduría_slides.html" target="_blank">Slideshow</a></td>
+      <td>Anansi y la sabiduría</td>
+      <td style="text-align: center"><a href="/stories/es/0006_anansi_y_la_sabiduría.html">HTML</a> · <a href="/stories/es/0006_anansi_y_la_sabiduría_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/es.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/7ybh97ds8bsztnx/es.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9Esbsd0ZxRnBQdWdwZlE/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="es0006"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
