--- a/stories/no/0073_å-telle-dyr.html
+++ b/stories/no/0073_å-telle-dyr.html
@@ -49,7 +49,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>norsk</div><p style="page-br
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/04.jpg" /></p>
 
-<p>Det er tre bøffler og fire fugler. De er alle på vei for å drikke vann.</p>
+<p>Det er tre bøfler og fire fugler. De er alle på vei for å drikke vann.</p>
 
 <div class="pagenum">3</div>
 <p style="page-break-after: always;"></p>
@@ -70,7 +70,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>norsk</div><p style="page-br
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/07.jpg" /></p>
 
-<p>Ni zebraer går for å drikke vann.</p>
+<p>Ni sebraer går for å drikke vann.</p>
 
 <div class="pagenum">6</div>
 <p style="page-break-after: always;"></p>
