--- a/stories/no/0073_å-telle-dyr_slides.html
+++ b/stories/no/0073_å-telle-dyr_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/04.jpg" /></p>
-<p>Det er tre bøffler og fire fugler. De er alle på vei for å drikke vann.</p>
+<p>Det er tre bøfler og fire fugler. De er alle på vei for å drikke vann.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0073/07.jpg" /></p>
-<p>Ni zebraer går for å drikke vann.</p>
+<p>Ni sebraer går for å drikke vann.</p>
 <center>
 <strong>6</strong>
 </center>
