--- a/stories/no/0204_akatope.html
+++ b/stories/no/0204_akatope.html
@@ -84,7 +84,7 @@ Alice Kapolondo<br>norsk</div><p style="page-break-after: always;"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/09.jpg" /></p>
 
-<p>De andre barna fortalte foreldrene sine hva som hadde hendt med Akapope. De var lei seg og sjokkerte.</p>
+<p>De andre barna fortalte foreldrene sine hva som hadde hendt med Akatope. De var lei seg og sjokkerte.</p>
 
 <div class="pagenum">8</div>
 <p style="page-break-after: always;"></p>
