--- a/stories/zh/0214_老鼠_slides.html
+++ b/stories/zh/0214_老鼠_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="akatope" class="slide level1">
-<h1>Akatope</h1>
+<section id="老鼠" class="slide level1">
+<h1>老鼠</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/02.jpg" /></p>
-<p>Det var en gang en gammel dame som alltid hadde ønsket seg et barn.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/02.jpg" /></p>
+<p>从前有两只老鼠。一只住在灌木中。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/03.jpg" /></p>
-<p>Hun tok den beste leirjorda hun kunne finne og begynte å lage en jente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/03.jpg" /></p>
+<p>另一只住在房子里。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/04.jpg" /></p>
-<p>Jenta som var laget av leire ble til en ekte menneskejente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/04.jpg" /></p>
+<p>有一天，住在房子里的老鼠对住在灌木中的老鼠说：“你吃得差，睡得差，还会淋雨。”</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/05.jpg" /></p>
-<p>Den gamle damen var veldig glad. Hun kalte jenta Akatope. Hun var veldig glad i Akatope.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/05.jpg" /></p>
+<p>“但是我们，我们住在大厨的房子里。我们吃各种各样的食物。哪天你过来找我玩吧。” 住在房子里的老鼠说。“我今晚就过来”。 住在灌木丛中的老鼠说， “那我就刘姥姥进大观园啦。”</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/06.jpg" /></p>
-<p>Akatope ble advart av sin gamle mor om at hun ikke måtte komme ut av hytta, men hun hørte ikke etter. Hver gang moren ikke var klar over det, snek Akatope seg ut for å leke med de andre barna.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/06.jpg" /></p>
+<p>与此同时，房子的主人非常愤怒。他诅咒：“这些吃我食物的老鼠，他们等着瞧。” 这一次，他用糖做诱饵，设了个陷阱。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/07.jpg" /></p>
-<p>En dag da Akatope var ute og lekte med de andre barna, begynte det å regne kraftig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/07.jpg" /></p>
+<p>老鼠们来到房子里吃糖果。他们大笑：“吱吱吱。。吱吱。。”</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/08.jpg" /></p>
-<p>De andre barna løp til hyttene sine, men da Akatope løp til sin, begynte beina hennes å gå i oppløsning. Hun krøkte seg sammen mellom buskene.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/08.jpg" /></p>
+<p>当他们靠近房中陷阱的时候，住在房子里的老鼠说：“让我尝尝这个糖果。你看到了，我们在这里吃的糖果。”</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/09.jpg" /></p>
-<p>De andre barna fortalte foreldrene sine hva som hadde hendt med Akatope. De var lei seg og sjokkerte.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/09.jpg" /></p>
+<p>但是那只老鼠还没有拿到糖果，只听“啪”的一声，它就落入了陷阱。老鼠的头被夹住了，它的眼睛肿得像茄子。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/10.jpg" /></p>
-<p>Da den gamle damen hørte hva som hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/10.jpg" /></p>
+<p>住在灌木中的老鼠看着，大吃一惊。它说：“呵呵。我的伙伴，你吃的哪种糖果让你的眼睛肿起来了？”</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/11.jpg" /></p>
-<p>Men det var ikke nødvendig. En stor overraskelse ventet den gamle damen!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/11.jpg" /></p>
+<p>住在房子中的老鼠无言以对。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/12.jpg" /></p>
-<p>Få dager etter at den foreldreløse jenta hadde blitt ønsket velkommen i den gamle damens hjem, banket det på døra.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/12.jpg" /></p>
+<p>灌木鼠对房子鼠说：“哈哈。我不会碰你赞赏的糖果。”</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/13.jpg" /></p>
-<p>&quot;Hvem kan det være,&quot; undret den gamle damen. Da hun åpnet døra var hun fra seg av begeistring.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/13.jpg" /></p>
+<p>自己的家再不好，也比邻居的豪宅要好。</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,30 +204,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/14.jpg" /></p>
-<p>Akatope hadde kommet hjem. Men hun var trøtt og syk.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/15.jpg" /></p>
-<p>Akatopes gamle mor solgte alt hun eide. Hun brukte pengene til å behandle Akatope. Akatope vokste opp til å bli den vakreste jenta i landsbyen.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="akatope-1">Akatope</h2>
-Text: Alice Kapolondo<br> Illustrations: Catherine Groenewald, Microsoft Clip Art and Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Norwegian<br>
+<h2 id="老鼠-1">老鼠</h2>
+Text: Nambi Sseppuuya Community Resource Centre<br> Illustrations: Zablon Alex Nguku<br> Translation: Xiaoya YE<br> Language: Chinese (Mandarin)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/akatope'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/rat'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
