--- a/stories/es/0006_anansi_y_la_sabiduría_slides.html
+++ b/stories/es/0006_anansi_y_la_sabiduría_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="akatope" class="slide level1">
-<h1>Akatope</h1>
+<section id="anansi-y-la-sabiduria" class="slide level1">
+<h1>Anansi y la sabiduría</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/02.jpg" /></p>
-<p>Det var en gang en gammel dame som alltid hadde ønsket seg et barn.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
+<p>Hace mucho, mucho tiempo las personas no sabían nada. No sabían cómo cultivar, o cómo tejer tela, o cómo hacer herramientas de hierro. El dios Nyame arriba en el cielo tenía toda la sabiduría del mundo. La mantenía segura en una vasija de barro.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/03.jpg" /></p>
-<p>Hun tok den beste leirjorda hun kunne finne og begynte å lage en jente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
+<p>Un día, Nyame decidió que le daría la vasija de la sabiduría a Anansi. Cada vez que Anansi miraba dentro de la vasija de barro, aprendía algo nuevo. ¡Qué apasionante!</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/04.jpg" /></p>
-<p>Jenta som var laget av leire ble til en ekte menneskejente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
+<p>El codicioso Anansi pensó, “voy a mantener la vasija segura en la copa de un árbol alto. ¡Entonces la puedo tener toda para mi!” Hiló un hilo largo, envolvió con él la vasija de barro, y lo ató a su estómago. Empezó a trepar el árbol. Pero era difícil trepar el árbol con la vasija pegándole en las rodillas todo el tiempo.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/05.jpg" /></p>
-<p>Den gamle damen var veldig glad. Hun kalte jenta Akatope. Hun var veldig glad i Akatope.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
+<p>Todo este tiempo el joven hijo de Anansi había estado mirando desde la base del árbol. Dijo, “¿no sería más fácil trepar si te ataras la vasija a tu espalda?” Anansi intentó atar la vasija de barro llena de sabiduría a su espalda, y realmente fue mucho más fácil.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/06.jpg" /></p>
-<p>Akatope ble advart av sin gamle mor om at hun ikke måtte komme ut av hytta, men hun hørte ikke etter. Hver gang moren ikke var klar over det, snek Akatope seg ut for å leke med de andre barna.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
+<p>En un instante llegó a la copa del árbol. Pero entonces se detuvo y pensó, “se supone que soy yo quien tiene toda la sabiduría, ¡y aquí mi hijo fue más listo que yo!” Anansi se enojó tanto por esto que lanzó la vasija de barro hacia abajo, fuera del árbol.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/07.jpg" /></p>
-<p>En dag da Akatope var ute og lekte med de andre barna, begynte det å regne kraftig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
+<p>Se rompió en pedazos en el suelo. La sabiduría fue libre para que todo el mundo la compartiera. Y así es cómo la gente aprendió a cultivar, tejer tela, hacer herramientas de hierro, y todas las otras cosas que la gente sabe cómo hacer.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,84 +150,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/08.jpg" /></p>
-<p>De andre barna løp til hyttene sine, men da Akatope løp til sin, begynte beina hennes å gå i oppløsning. Hun krøkte seg sammen mellom buskene.</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/09.jpg" /></p>
-<p>De andre barna fortalte foreldrene sine hva som hadde hendt med Akatope. De var lei seg og sjokkerte.</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/10.jpg" /></p>
-<p>Da den gamle damen hørte hva som hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/11.jpg" /></p>
-<p>Men det var ikke nødvendig. En stor overraskelse ventet den gamle damen!</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/12.jpg" /></p>
-<p>Få dager etter at den foreldreløse jenta hadde blitt ønsket velkommen i den gamle damens hjem, banket det på døra.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/13.jpg" /></p>
-<p>&quot;Hvem kan det være,&quot; undret den gamle damen. Da hun åpnet døra var hun fra seg av begeistring.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/14.jpg" /></p>
-<p>Akatope hadde kommet hjem. Men hun var trøtt og syk.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/15.jpg" /></p>
-<p>Akatopes gamle mor solgte alt hun eide. Hun brukte pengene til å behandle Akatope. Akatope vokste opp til å bli den vakreste jenta i landsbyen.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="akatope-1">Akatope</h2>
-Text: Alice Kapolondo<br> Illustrations: Catherine Groenewald, Microsoft Clip Art and Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Norwegian<br>
+<h2 id="anansi-y-la-sabiduria-1">Anansi y la sabiduría</h2>
+Text: Cuento de Ghana<br> Illustrations: Wiehan de Jager<br> Translation: Felipe Bañados Schwerter<br> Language: Spanish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/akatope'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
