--- a/stories/es/0008_qué-estás-haciendo_slides.html
+++ b/stories/es/0008_qué-estás-haciendo_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p>Qué estás haciendo?</p>
+<p>¿Qué estás haciendo?</p>
 <center>
 <strong>8</strong>
 </center>
