--- a/stories/es/0231_el-libro-del-clima_slides.html
+++ b/stories/es/0231_el-libro-del-clima_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p>Llueve.</p>
+<p>Está lloviendo.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>Truena.</p>
+<p>Hay truenos.</p>
 <center>
 <strong>7</strong>
 </center>
