--- a/stories/zh/0306_我的女儿polar_slides.html
+++ b/stories/zh/0306_我的女儿polar_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="akatope" class="slide level1">
-<h1>Akatope</h1>
+<section id="我的女儿polar" class="slide level1">
+<h1>我的女儿Polar</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/02.jpg" /></p>
-<p>Det var en gang en gammel dame som alltid hadde ønsket seg et barn.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/02.jpg" /></p>
+<p>这是我的女儿Polar。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/03.jpg" /></p>
-<p>Hun tok den beste leirjorda hun kunne finne og begynte å lage en jente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/03.jpg" /></p>
+<p>她是一个好女孩。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/04.jpg" /></p>
-<p>Jenta som var laget av leire ble til en ekte menneskejente.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/04.jpg" /></p>
+<p>她喜欢讲故事。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/05.jpg" /></p>
-<p>Den gamle damen var veldig glad. Hun kalte jenta Akatope. Hun var veldig glad i Akatope.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/05.jpg" /></p>
+<p>她的妈妈给她讲故事。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/06.jpg" /></p>
-<p>Akatope ble advart av sin gamle mor om at hun ikke måtte komme ut av hytta, men hun hørte ikke etter. Hver gang moren ikke var klar over det, snek Akatope seg ut for å leke med de andre barna.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/06.jpg" /></p>
+<p>Polar也给她的朋友讲故事。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/07.jpg" /></p>
-<p>En dag da Akatope var ute og lekte med de andre barna, begynte det å regne kraftig.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/07.jpg" /></p>
+<p>有一天Polar 讲了一个非常好的故事。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/08.jpg" /></p>
-<p>De andre barna løp til hyttene sine, men da Akatope løp til sin, begynte beina hennes å gå i oppløsning. Hun krøkte seg sammen mellom buskene.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/08.jpg" /></p>
+<p>这个故事是关于烹饪的。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/09.jpg" /></p>
-<p>De andre barna fortalte foreldrene sine hva som hadde hendt med Akatope. De var lei seg og sjokkerte.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0306/09.jpg" /></p>
+<p>她的老师给了她一个蛋糕，所有人都很高兴。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,66 +168,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/10.jpg" /></p>
-<p>Da den gamle damen hørte hva som hadde hendt barnet hennes, gråt hun i flere dager. Landsbyboerne bestemte seg for å ta med seg en annen liten jente som hadde blitt foreldreløs til å ta Akatopes plass.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/11.jpg" /></p>
-<p>Men det var ikke nødvendig. En stor overraskelse ventet den gamle damen!</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/12.jpg" /></p>
-<p>Få dager etter at den foreldreløse jenta hadde blitt ønsket velkommen i den gamle damens hjem, banket det på døra.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/13.jpg" /></p>
-<p>&quot;Hvem kan det være,&quot; undret den gamle damen. Da hun åpnet døra var hun fra seg av begeistring.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/14.jpg" /></p>
-<p>Akatope hadde kommet hjem. Men hun var trøtt og syk.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0204/15.jpg" /></p>
-<p>Akatopes gamle mor solgte alt hun eide. Hun brukte pengene til å behandle Akatope. Akatope vokste opp til å bli den vakreste jenta i landsbyen.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="akatope-1">Akatope</h2>
-Text: Alice Kapolondo<br> Illustrations: Catherine Groenewald, Microsoft Clip Art and Wiehan de Jager<br> Translation: Espen Stranger-Johannessen<br> Language: Norwegian<br>
+<h2 id="我的女儿polar-1">我的女儿Polar</h2>
+Text: Cissy Namugerwa<br> Illustrations: Vusi Malindi<br> Translation: Xiaoya YE<br> Language: Chinese (Mandarin)<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/akatope'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/my-daughter-polar'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
