--- a/stories/index.html
+++ b/stories/index.html
@@ -248,7 +248,7 @@
       <td>0130</td>
       <td><a href="http://africanstorybook.org/stories/my-grandma">My grandma</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#zh0130">zh</a></td>
+      <td><a href="#fa0130">fa</a>, <a href="#zh0130">zh</a></td>
     </tr>
     <tr>
       <td>0134</td>
@@ -1678,6 +1678,13 @@
       <td style="text-align: center"><a href="/stories/fa/0127_بازی‌های-گوناگون.html">HTML</a> · <a href="/stories/fa/0127_بازی‌های-گوناگون_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/909r07ngzaerm84/fa.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsQ2pENEl5NXA3bGM/view?usp=sharing">Google Drive</a></td>
       <td><a name="fa0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0130</td>
+      <td>مادر بزرگ من</td>
+      <td style="text-align: center"><a href="/stories/fa/0130_مادر-بزرگ-من.html">HTML</a> · <a href="/stories/fa/0130_مادر-بزرگ-من_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/909r07ngzaerm84/fa.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsQ2pENEl5NXA3bGM/view?usp=sharing">Google Drive</a></td>
+      <td><a name="fa0130"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0223</td>
