add 71 languages to imagebank search

--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -25,22 +25,78 @@
         <input type="text" id="key_input" autocomplete="off" accesskey="s" />
       </td><td>
       <select id="lang_switcher" onchange="loadwordlist(this.value);">
+        <option value="om">Afan Oromo</option>
         <option value="af">Afrikaans</option>
+        <option value="alz">Alur</option>
+        <option value="am">Amharic</option>
+        <option value="anu">Anywak</option>
+        <option value="luc">Aringati</option>
+        <option value="teo">Ateso</option>
         <option value="zh">Chinese</option>
+        <option value="nyu">Chinyungwe</option>
+        <option value="cce">Cicopi</option>
+        <option value="da">Danish</option>
+        <option value="luo">Dholuo</option>
+        <option value="guz">Ekegusii</option>
         <option value="en">English</option>
         <option value="eo">Esperanto</option>
-        <option value="fr">French</option> 
+        <option value="fr">French</option>
+        <option value="ff">Fulfulde</option>
         <option value="de">German</option>
+        <option value="de">German</option>
+        <option value="ki">Gikuyu</option>
+        <option value="toh">Gitonga</option>
+        <option value="gur">Gurene</option>
         <option value="ha">Hausa</option>
         <option value="hi">Hindi</option>
+        <option value="nr">isiNdebele</option>
+        <option value="xh">isiXhosa</option>
+        <option value="zu">isiZulu</option>
+        <option value="jam">Jamaican Creole</option>
+        <option value="keo">Kakwa</option>
+        <option value="kr">Kanuri</option>
+        <option value="kam">Kikamba</option>
+        <option value="mer">Kimîîru</option>
+        <option value="rw">Kinyarwanda</option>
         <option value="sw">Kiswahili</option>
+        <option value="laj">Leblango</option>
+        <option value="bxk">Lubukusu</option>
         <option value="lg">Luganda</option>
         <option value="lgg">Lugbarati</option>
-        <option value="no">Norwegian</option>
+        <option value="myx">Lumasaaba</option>
+        <option value="nuj">Lunyole</option>
+        <option value="lsm">Lusamia</option>
+        <option value="xog">Lusoga</option>
+        <option value="mas">Maa</option>
+        <option value="mhi">Ma'di</option>
+        <option value="ne">Nepali</option>
+        <option value="kdj">Ngakarimojong</option>
+        <option value="tuv">Ng'aturkana</option>
+        <option value="nn">Norwegian (Bokmål)</option>
+        <option value="no">Norwegian (Nynorsk)</option>
+        <option value="lko">Olukhayo</option>
+        <option value="nle">Olunyala</option>
+        <option value="lwg">Oluwanga</option>
+        <option value="fa">Persian</option>
         <option value="pt">Portuguese</option>
+        <option value="nyn">Runyankore</option>
         <option value="ru">Russian</option>
+        <option value="ttj">Rutooro</option>
+        <option value="kpz">Sabinyi</option>
+        <option value="nso">Sepedi</option>
+        <option value="st">Sesotho</option>
+        <option value="tn">Setswana</option>
+        <option value="ss">siSwati</option>
+        <option value="so">Somali</option>
         <option value="es">Spanish</option>
+        <option value="sv">Swedish</option>
+        <option value="tl">Tagalog</option>
+        <option value="ve">Tshivenda</option>
+        <option value="ts">Xitsonga</option>
+        <option value="tsc">Xitswa</option>
         <option value="yo">Yoruba</option>
+        <option value="zne">Zande</option>
+        <option value="dje">Zarma</option>
       </select>
       </td></tr><tr><td>
         <input type="submit" value="Search" onclick="img_search()">
