fix bugs in imagebank interface

--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -72,8 +72,8 @@
         <option value="ne">Nepali</option>
         <option value="kdj">Ngakarimojong</option>
         <option value="tuv">Ng'aturkana</option>
-        <option value="nn">Norwegian (Bokmål)</option>
-        <option value="no">Norwegian (Nynorsk)</option>
+        <option value="no">Norwegian (Bokmål)</option>
+        <option value="nn">Norwegian (Nynorsk)</option>
         <option value="lko">Olukhayo</option>
         <option value="nle">Olunyala</option>
         <option value="lwg">Oluwanga</option>
