+new stories: no, yue

--- a/stories/index.html
+++ b/stories/index.html
@@ -158,7 +158,13 @@
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#no0067">no</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+    </tr>
+    <tr>
+      <td>0068</td>
+      <td><a href="http://africanstorybook.org/stories/how-many">How many?</a></td>
+      <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+      <td><a href="#yue0068">yue</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -556,6 +562,13 @@
       <td style="text-align: center"><a href="/stories/yue/0067_整餸.html">HTML</a> · <a href="/stories/yue/0067_整餸_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="yue0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0068</td>
+      <td>幾多？</td>
+      <td style="text-align: center"><a href="/stories/yue/0068_幾多.html">HTML</a> · <a href="/stories/yue/0068_幾多_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/yue.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/wb7smewm55zy51g/yue.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsOVo0LWxvbWJvZE0/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="yue0068"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0073</td>
@@ -1477,6 +1490,13 @@
       <td style="text-align: center"><a href="/stories/no/0009_hvor-er-katten-min.html">HTML</a> · <a href="/stories/no/0009_hvor-er-katten-min_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="no0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td>Lage mat</td>
+      <td style="text-align: center"><a href="/stories/no/0067_lage-mat.html">HTML</a> · <a href="/stories/no/0067_lage-mat_slides.html" target="_blank">Slideshow</a></td>
+      <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/no.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/ona8gaetcci9m5f/no.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsVmtZTlhSZlhpQkU/view?usp=sharing">Google Drive</a></li></ul></td>
+      <td><a name="no0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0073</td>
